# homepage-services-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  TESTING.md  homepage_services.py  pyproject.toml  services.yaml  services.yaml.pre-proxmox-guests-20260614-160606.bak  test_results.md
homepage_services/: __init__.py  bookmarks.py  bookmarks_utils.py  cli.py  docker.py  docker_utils.py  models.py  settings.py  settings_utils.py  utils.py
tests/: conftest.py
tests/integration/: test_bookmarks_cli.py  test_cli.py  test_docker_cli.py  test_settings_cli.py
tests/unit/: test_bookmarks_utils.py  test_docker_utils.py  test_models.py  test_settings_utils.py  test_utils.py
