[project]
name = "homepage-services-cli"
version = "0.1.0"
description = "A command-line tool for managing Homepage services.yaml configuration files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "elvee" },
]
keywords = ["homepage", "yaml", "cli", "services"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "requests>=2.31.0",
    "ruamel.yaml>=0.18.0",
    "typer[all]>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
homepage-services = "homepage_services.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["homepage_services"]

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`, `W`), isort (`I`), pydocstyle (`D`),
# pydoclint (`DOC`), pep8-naming (`N`), flake8-tidy-imports (`TID`),
# flake8-future-annotations (`FA`), and pyupgrade (`UP`).
select = [
    "F",
    "E",
    "W",
    "I",
    "D",
    "DOC",
    "N",
    "TID",
    "FA",
    "UP",
]

# Ignore specific rules that don't apply
ignore = [
    "D100",   # Missing docstring in public module (we'll add module-level docstrings gradually)
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D212",   # Multi-line docstring summary should start at the first line (conflicts with D213)
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["homepage_services"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can have less strict docstring rules
"tests/**/*.py" = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["homepage_services"]
branch = true

[tool.coverage.paths]
source = [
    "homepage_services/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint = "ruff check --fix ."
format = "ruff format ."
test = "pytest -q"
test-cov = "pytest --cov=homepage_services --cov-report=term-missing:skip-covered --cov-report=xml"
check = "ruff check . && ruff format --check . && pytest -q"
